# PRTS-GuBot-TrapAction

./: .gitmodules  README.md  pyproject.toml
.github/actions/setup-python/: action.yml
.github/setup-python/: action.yml
.github/workflow/: trapstage.yml
.github/workflows/: testlogin.yml  trapedit.yml  trapedit_test.yml  trapstage.yml  trapstage_edit.yml
src/: __init__.py
src/testlogin/: __init__.py
src/trapedit/: __init__.py  static.py
src/trapstage/: __init__.py  local.py  trapsformat.json
src/trapstage/source/: internet.py  local.py  utils.py
src/trapstage/source/templates/: trapper.jinja2
