[project]
name = "prts-gubot-trapaction"
version = "0.1.0"
description = "For action-edit"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "anyio>=4.11.0",
    "click>=8.3.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "mwbot>=1.0.42",
    "torappu @ git+https://github.com/GuGuMur/torappu.git@master",
]

